src/TObj/TObj_OcafObjectIterator.cxx
@@ -29,8 +29,10 @@ IMPLEMENT_STANDARD_RTTIEXT(TObj_OcafObjectIterator,TObj_LabelIterator)
 TObj_OcafObjectIterator::TObj_OcafObjectIterator
                          (const TDF_Label&             theLabel,
                           const Handle(Standard_Type)& theType,
-                          const Standard_Boolean       theRecursive)
-     : TObj_LabelIterator( theLabel, theRecursive ), myType( theType )
+                          const Standard_Boolean       theRecursive,
+                          const Standard_Boolean       theAllSubChildren)
+     : TObj_LabelIterator (theLabel, theRecursive),
+       myType (theType), myAllSubChildren (theAllSubChildren)
 {
   MakeStep();
 }
@@ -46,14 +48,14 @@ void TObj_OcafObjectIterator::MakeStep()
   {
     TDF_Label L = myIterator.Value();
     Handle(TObj_Object) anObject;
-    if(TObj_Object::GetObj(L,anObject))
+    if(TObj_Object::GetObj (L, anObject))
     {
-      if (myType.IsNull() || anObject->IsKind( myType ))
+      if (myType.IsNull() || anObject->IsKind (myType))
       {
         myObject = anObject;
         myNode = L;
       }
-      myIterator.NextBrother();
+      myAllSubChildren ? myIterator.Next() : myIterator.NextBrother();
     }
     else
       myIterator.Next();
